tests/golden/parse_errors/export_invalid_fun.cd
export fun f() { return 1; }
